src/styles/components/ui/FooterSection.css
/* FooterSection styles */

.footer-section {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    
    background-color: #000;
    color: white;
    width: 100%;
    border-top-left-radius: 42px;
    border-top-right-radius: 42px;
}

.footer-section .logo {
    width: 15%;
    filter: brightness(0) invert(1);
    margin-left: 5%;
}

.footer-section h6 {
    font-family: 'Montserrat';
    font-weight: 900;
    font-size: 1.2vw;
    margin-right: 5%;
}

@media (max-width: 600px) {

    .footer-section {
        border-top-left-radius: 25px;
        border-top-right-radius: 25px;
        display: flex;
        flex-direction: column;
    }

    .footer-section .logo {
        width: 35%;
        padding: 2% 4%;
    }

    .footer-section h6 {
        margin: 0;
        font-size: 3.1vw;
    }
}

/* END FooterSection styles */

